# pulse

./: .gitignore  README.md  SKILL.md  daily-news.skill  install.sh  pyproject.toml  sync.sh  uninstall.sh
app/: __init__.py  categories.py  menubar.py  reporter.py  runner.py
app/signal_agent/: __init__.py  digg.py  graph.py  llm.py  models.py  prompts.py  tools.py
docs/: cross-pipeline-categorization.md  signal-agent-spec.md
pulse-tech/: SKILL.md
pulse-tools/: SKILL.md
scripts/: briefing.py  last30days.py  pulse.py  store.py  watchlist.py
scripts/lib/: __init__.py  bird_x.py  cookie_extract.py  dates.py  env.py  firecrawl.py  github.py  hackernews.py  hermes_tweet_x.py  http.py  log.py  normalize.py  pipeline.py  planner.py  providers.py  quality_nudge.py  reddit_public.py  render.py  resolve.py  schema.py  setup_wizard.py  signals.py  ui.py  xai_x.py
tech-pulse/: SKILL.md
tests/: test_hermes_tweet_x.py
tools-pulse/: SKILL.md
